@@ -1,6 +1,8 @@
 Changes in
 - (devel) By Tron: code cleanup, make C functions and variables static where
   possible.
+- Require two slashes before dismissing anything as a C++ style comment.
+- Fix reading of real sprites with Unixy absolute paths.
 
 Changes in 0.9.10 (r819)
 - (bugfix) Correct reading of \7c, \7C, \D| and \D&. (DaleStan)
